Refactor RagFileServiceTest to use a new document ID and improve visibility checks for soft-deleted documents